--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
   "name": "vue-rxjs-decorator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.4",
+  "description": "create rxjs observable object with decorator",
+  "main": "lib/decorator.js",
+  "module": "lib/decorator.umd.js",
+  "typings": "./lib/decorator.d.ts",
   "scripts": {
+    "build": "tsc -p ./src/tsconfig.json && rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Lostlover/vue-rxjs-decorator.git"
   },
-  "keywords": [],
+  "keywords": [
+    "vue",
+    "typescript",
+    "decorator",
+    "rxjs"
+  ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Lostlover/vue-rxjs-decorator/issues"
   },
-  "homepage": "https://github.com/Lostlover/vue-rxjs-decorator#readme"
+  "homepage": "https://github.com/Lostlover/vue-rxjs-decorator#readme",
+  "peerDependencies": {
+    "rxjs": "^6",
+    "vue": "^2"
+  },
+  "dependencies": {
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.1.0",
+    "rxjs": "^6.5.2"
+  },
+  "devDependencies": {
+    "rollup": "^1.19.4",
+    "typescript": "^3.5.3"
+  }
 }
