--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "homepage": "https://github.com/Lostlover/vue-rxjs-decorator#readme",
   "peerDependencies": {
     "rxjs": "^6",
-    "vue": "^2"
+    "vue": "^2",
+    "vue-class-component": "^7.1.0"
   },
   "dependencies": {
     "vue": "^2.6.10",
